--- a/expected-gpa.html
+++ b/expected-gpa.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Redirecting…</title>
+  <meta http-equiv="refresh" content="0; url=./index.html#forecast" />
+  <link rel="canonical" href="./index.html#forecast" />
+  <script>location.replace("./index.html#forecast");</script>
+</head>
+<body>Redirecting…</body>
+</html>
