--- a/expected-gpa.html
+++ b/expected-gpa.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Redirecting…</title>
   <meta http-equiv="refresh" content="0; url=./index.html#forecast" />
   <link rel="canonical" href="./index.html#forecast" />
-  <script>location.replace("./index.html#forecast");</script>
+  <title>Redirecting…</title>
 </head>
-<body>Redirecting…</body>
+<body>
+  Redirecting to <a href="./index.html#forecast">Forecast GPA</a>…
+  <script>location.replace("./index.html#forecast");</script>
+</body>
 </html>
