--- a/expected-gpa.html
+++ b/expected-gpa.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0; url=./index.html#forecast" />
-  <link rel="canonical" href="./index.html#forecast" />
-  <title>Redirecting…</title>
+  <meta charset="utf-8">
+  <title>Redirecting...</title>
+  <meta name="robots" content="noindex">
+  <meta http-equiv="refresh" content="0; url=./index.html#forecast">
+  <script>
+    location.replace("./index.html#forecast");
+  </script>
 </head>
 <body>
-  Redirecting to <a href="./index.html#forecast">Forecast GPA</a>…
-  <script>location.replace("./index.html#forecast");</script>
+  Redirecting to Forecast GPA...
 </body>
 </html>
