--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AOU GPA Calculator</title>
 
+  <meta property="og:title" content="AOU GPA Calculator" />
+<meta property="og:description" content="Calculate your current GPA and forecast your expected GPA (4.0 scale)." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+<meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+
+
   <meta name="description" content="AOU GPA Calculator – Modern web app to calculate Current GPA and Forecast Expected GPA on a 4.0 scale, including retake replacement." />
   <meta name="author" content="Homam Shaaban" />
   <meta name="robots" content="index, follow" />
@@ -1688,3 +1698,4 @@
   </script>
 </body>
 </html>
+
