--- a/current-gpa.html
+++ b/current-gpa.html
@@ -1,15 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Redirecting...</title>
-  <meta name="robots" content="noindex">
+  <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=./index.html#current">
   <script>
-    location.replace("./index.html#current");
+    window.location.replace("./index.html#current");
   </script>
 </head>
-<body>
-  Redirecting to Current GPA...
-</body>
+<body></body>
 </html>
