--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AOU GPA Calculator</title>
 
-  <meta property="og:title" content="AOU GPA Calculator" />
-<meta property="og:description" content="Calculate your current GPA and forecast your expected GPA (4.0 scale)." />
+ <!-- Primary -->
+<title>AOU GPA Calculator</title>
+<meta name="description" content="AOU GPA Calculator – Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+
+<!-- Open Graph (WhatsApp / Facebook / LinkedIn / Telegram / Discord) -->
+<meta property="og:title" content="AOU GPA Calculator" />
+<meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
 <meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+<meta property="og:image:secure_url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
+<!-- Twitter (X) -->
 <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="AOU GPA Calculator" />
+<meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
 <meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+<meta name="twitter:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+
 
 
   <meta name="description" content="AOU GPA Calculator – Modern web app to calculate Current GPA and Forecast Expected GPA on a 4.0 scale, including retake replacement." />
@@ -1698,4 +1712,5 @@
   </script>
 </body>
 </html>
+
 
