--- a/index.html
+++ b/index.html
@@ -3,50 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO -->
   <title>AOU GPA Calculator</title>
-
- <!-- Primary -->
-<title>AOU GPA Calculator</title>
-<meta name="description" content="AOU GPA Calculator – Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-
-<!-- Open Graph (WhatsApp / Facebook / LinkedIn / Telegram / Discord) -->
-<meta property="og:title" content="AOU GPA Calculator" />
-<meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
-<meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-<meta property="og:image:secure_url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-<meta property="og:image:type" content="image/png" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-
-<!-- Twitter (X) -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="AOU GPA Calculator" />
-<meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-<meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-<meta name="twitter:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
-
-
-
-  <meta name="description" content="AOU GPA Calculator – Modern web app to calculate Current GPA and Forecast Expected GPA on a 4.0 scale, including retake replacement." />
+  <meta name="description" content="AOU GPA Calculator – Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
   <meta name="author" content="Homam Shaaban" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
 
-  <!-- Social -->
+  <!-- Open Graph (WhatsApp / Facebook / Telegram / LinkedIn / Discord) -->
   <meta property="og:title" content="AOU GPA Calculator" />
-  <meta property="og:description" content="Calculate your current GPA and forecast your expected GPA (4.0 scale)." />
+  <meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/aou-logo.png" />
-  <meta name="twitter:card" content="summary" />
+  <meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+  <meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+  <meta property="og:image:secure_url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-  <!-- App polish -->
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AOU GPA Calculator" />
+  <meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+  <meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
+  <meta name="twitter:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+
+  <!-- Icons -->
   <link rel="icon" href="aou-logo.png" />
   <link rel="apple-touch-icon" href="aou-logo.png" />
   <meta name="theme-color" content="#071a2b" />
 
-  <!-- Font -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -91,7 +79,6 @@
       overflow-x:hidden;
     }
 
-    /* RTL tweaks */
     html[dir="rtl"] body { font-family: "Inter", system-ui, -apple-system, "Segoe UI", Tahoma, Arial, sans-serif; }
     html[dir="rtl"] .tableWrap table { direction: rtl; }
     html[dir="rtl"] th, html[dir="rtl"] td { text-align: right; }
@@ -196,8 +183,6 @@
     }
     .chip:focus-visible{ outline:3px solid rgba(255,211,92,.55); outline-offset:3px; }
 
-    .tabPanels{ margin-top: 12px; }
-
     .panel{
       background: var(--card);
       border: 1px solid var(--cardBorder);
@@ -294,7 +279,6 @@
       color: #ffd5d5;
       line-height:1.4;
     }
-
     .success{
       display:none;
       margin-top: 10px;
@@ -467,15 +451,10 @@
       color: var(--muted);
       line-height:1.6;
     }
-    footer a{ color: rgba(255,211,92,.95); text-decoration:none; }
-    footer a:hover{ text-decoration: underline; }
 
-    /* ===================== Print Cover (PDF-style) ===================== */
+    /* Print */
     #printCover{ display:none; }
-    .printHeader{
-      display:flex; align-items:center; gap:14px;
-      padding: 6px 0 10px;
-    }
+    .printHeader{ display:flex; align-items:center; gap:14px; padding: 6px 0 10px; }
     .printLogo{ width:120px; }
     .printTitle{ margin:0; font-size: 18pt; }
     .printSubtitle{ margin:6px 0 0; color:#333; }
@@ -492,7 +471,6 @@
       body{ background:#fff !important; color:#000 !important; }
       .orb, header, .tabs, .topRow, footer, .btnRow, .iconBtn, .btn, details summary, .note { display:none !important; }
 
-      /* show cover in print */
       #printCover{ display:block !important; }
       .app{ box-shadow:none !important; border:none !important; background:#fff !important; color:#000 !important; padding:0 !important; }
       .panel{ background:#fff !important; border:none !important; padding:0 !important; }
@@ -501,7 +479,6 @@
       .field{ border:1px solid #ddd !important; background:#fff !important; color:#000 !important; }
       .status{ border-color:#ddd !important; background:#f6f6f6 !important; color:#000 !important; }
 
-      /* print only requested module */
       #tab-current, #tab-forecast{ display:none !important; }
       body[data-print="current"] #tab-current{ display:block !important; }
       body[data-print="forecast"] #tab-forecast{ display:block !important; }
@@ -519,12 +496,12 @@
 </head>
 
 <body>
-  <!-- ===================== PRINT COVER (Official Report) ===================== -->
+  <!-- Print Cover -->
   <section id="printCover" aria-hidden="true">
     <div class="printHeader">
       <img src="aou-logo.png" alt="AOU Logo" class="printLogo">
       <div>
-        <h1 id="printTitle" class="printTitle">AOU GPA Calculator – Official Report</h1>
+        <h1 id="printTitle" class="printTitle">AOU GPA Calculator – Report</h1>
         <p id="printSubtitle" class="printSubtitle">Generated for academic guidance only (not an official university record).</p>
       </div>
     </div>
@@ -565,22 +542,17 @@
         Modern web app to calculate <strong>Current GPA</strong> and forecast <strong>Expected GPA</strong> on a 4.0 scale.
       </p>
 
-      <!-- NEW: Clear “Unofficial” disclaimer badge (helps for university approval) -->
       <div class="note" id="officialNote">
         <strong>Disclaimer:</strong> Student-built tool for guidance only. Not an official AOU system.
       </div>
 
       <div class="tabs" role="tablist" aria-label="GPA Tabs">
-        <button class="chip" role="tab" id="tabBtn-current" aria-controls="tab-current" aria-selected="true" data-tab="current">
-          📘 Current GPA
-        </button>
-        <button class="chip" role="tab" id="tabBtn-forecast" aria-controls="tab-forecast" aria-selected="false" data-tab="forecast">
-          📊 Forecast GPA
-        </button>
+        <button class="chip" role="tab" id="tabBtn-current" aria-controls="tab-current" aria-selected="true" data-tab="current">📘 Current GPA</button>
+        <button class="chip" role="tab" id="tabBtn-forecast" aria-controls="tab-forecast" aria-selected="false" data-tab="forecast">📊 Forecast GPA</button>
       </div>
 
       <div class="tabPanels">
-        <!-- ========================= CURRENT TAB ========================= -->
+        <!-- CURRENT -->
         <section class="panel" id="tab-current" role="tabpanel" aria-labelledby="tabBtn-current">
           <div class="panelTitle" id="currentTitle">Current GPA Calculator</div>
           <p class="panelHint" id="currentHint">
@@ -643,7 +615,7 @@
           </div>
         </section>
 
-        <!-- ========================= FORECAST TAB ========================= -->
+        <!-- FORECAST -->
         <section class="panel" id="tab-forecast" role="tabpanel" aria-labelledby="tabBtn-forecast" hidden>
           <div class="panelTitle" id="forecastTitle">Expected GPA Forecast</div>
           <p class="panelHint" id="forecastHint">
@@ -696,9 +668,7 @@
           <div id="forecast-ok" class="success" role="status"></div>
 
           <div class="result" aria-live="polite">
-            <div class="big">
-              <span id="forecast-outGpa">–</span>
-            </div>
+            <div class="big"><span id="forecast-outGpa">–</span></div>
             <div class="pill">
               <span id="expectedGpaLabel">Expected GPA</span>
               <span id="forecast-outMerit"></span>
@@ -811,7 +781,6 @@
       const btnForecast = $("tabBtn-forecast");
       const panelCurrent = $("tab-current");
       const panelForecast = $("tab-forecast");
-
       const isCurrent = (name === "current");
 
       btnCurrent.setAttribute("aria-selected", isCurrent ? "true" : "false");
@@ -837,7 +806,7 @@
       else setActiveTab("current");
     }
 
-    // ========================= Language (EN/AR) =========================
+    // ========================= Language =========================
     const LANG_KEY = "aouLangV2";
     function getLang(){
       try{
@@ -846,13 +815,13 @@
       }catch(e){}
       return "en";
     }
+
     function setLang(lang){
       const root = document.documentElement;
       root.lang = lang;
       root.dir = (lang === "ar") ? "rtl" : "ltr";
       try{ localStorage.setItem(LANG_KEY, lang); }catch(e){}
       applyI18N(lang);
-      // show the OTHER language as toggle target
       $("langToggle").textContent = (lang === "ar") ? "🌐 EN" : "🌐 AR";
     }
 
@@ -917,7 +886,6 @@
         forecastInvalid:"One or more forecast inputs are invalid.",
         fillGoal:"Fill completed hours, current GPA, semester hours, and target GPA first.",
 
-        // Print cover
         prTitle:"AOU GPA Calculator – Report",
         prSubtitle:"Generated for academic guidance only (not an official university record).",
         prName:"Name:",
@@ -991,7 +959,6 @@
         forecastInvalid:"بعض بيانات التوقع غير صحيحة.",
         fillGoal:"أدخل الساعات المنجزة + المعدل الحالي + ساعات الفصل + الهدف أولاً.",
 
-        // Print cover
         prTitle:"حاسبة المعدل – تقرير",
         prSubtitle:"تم إنشاء التقرير لأغراض الإرشاد الأكاديمي فقط (ليس سجلًا رسميًا).",
         prName:"الاسم:",
@@ -1075,7 +1042,6 @@
 
       $("footerNote").textContent = t.footer;
 
-      // Print cover texts
       $("printTitle").textContent = t.prTitle;
       $("printSubtitle").textContent = t.prSubtitle;
       $("pmNameLabel").textContent = t.prName;
@@ -1108,7 +1074,6 @@
       const lang = getLang();
       const active = (location.hash && location.hash.toLowerCase() === "#forecast") ? "forecast" : "current";
 
-      // cleaner URL creation (avoid duplicated params)
       const url = new URL(location.origin + location.pathname);
       url.hash = active === "forecast" ? "#forecast" : "#current";
       url.searchParams.set("lang", lang);
@@ -1127,16 +1092,13 @@
     function updatePrintCover(moduleKey){
       const lang = getLang();
       const t = I18N[lang];
-
       const now = new Date();
       const formatted = now.toLocaleString(lang === "ar" ? "ar-SA" : undefined);
       $("pmDateValue").textContent = formatted;
-
-      const mod = (moduleKey === "forecast") ? t.prModuleForecast : t.prModuleCurrent;
-      $("pmModuleValue").textContent = mod;
+      $("pmModuleValue").textContent = (moduleKey === "forecast") ? t.prModuleForecast : t.prModuleCurrent;
     }
 
-    // ========================= Current GPA (Retake Replacement) =========================
+    // ========================= Current GPA =========================
     const CURRENT_STORAGE = "aouCurrentStateRetakeV3";
     let currentAuto = true;
     let currentRowId = 0;
@@ -1177,25 +1139,24 @@
     function currentCreateRow(data = {}){
       currentRowId++;
       const tr = document.createElement("tr");
-      tr.dataset.row = String(currentRowId);
 
       const lang = getLang();
       const t = I18N[lang];
 
       tr.innerHTML = `
         <td>
-          <input class="field" type="text" placeholder="${lang==='ar'?'مثال: ITC101':'e.g., ITC101'}" value="${escapeHtml(data.code || "")}" aria-label="Course code" />
+          <input class="field" type="text" placeholder="${lang==='ar'?'مثال: ITC101':'e.g., ITC101'}" value="${escapeHtml(data.code || "")}" />
         </td>
         <td>
-          <input class="field" inputmode="numeric" type="number" min="0" max="100" placeholder="${lang==='ar'?'مثال: 85':'e.g., 85'}" value="${data.grade ?? ""}" aria-label="Course grade" />
+          <input class="field" inputmode="numeric" type="number" min="0" max="100" placeholder="${lang==='ar'?'مثال: 85':'e.g., 85'}" value="${data.grade ?? ""}" />
         </td>
         <td>
-          <input class="field" inputmode="numeric" type="number" min="1" placeholder="${lang==='ar'?'مثال: 3':'e.g., 3'}" value="${data.credits ?? ""}" aria-label="Credit hours" />
+          <input class="field" inputmode="numeric" type="number" min="1" placeholder="${lang==='ar'?'مثال: 3':'e.g., 3'}" value="${data.credits ?? ""}" />
         </td>
         <td class="tiny" data-points>–</td>
         <td><span class="status ok" data-status>${t.counted}</span></td>
         <td>
-          <button class="iconBtn" type="button" aria-label="Remove course">
+          <button class="iconBtn" type="button">
             <svg viewBox="0 0 24 24"><path d="M9 3h6l1 2h5v2H3V5h5l1-2zm1 6h2v10h-2V9zm4 0h2v10h-2V9zM7 9h2v10H7V9z"/></svg>
             ${t.remove}
           </button>
@@ -1414,7 +1375,7 @@
       window.print();
     }
 
-    // ========================= Forecast module =========================
+    // ========================= Forecast =========================
     const FORECAST_STORAGE = "aouForecastStateV2";
     let forecastAuto = true;
 
@@ -1601,7 +1562,7 @@
       window.print();
     }
 
-    // ========================= init & wiring =========================
+    // ========================= init =========================
     window.addEventListener("afterprint", ()=> { delete document.body.dataset.print; });
 
     function applyAutoButtonTexts(){
@@ -1623,9 +1584,7 @@
         const btn = tr.querySelector("button.iconBtn");
         if (btn){
           const nodes = Array.from(btn.childNodes);
-          nodes.forEach(n=>{
-            if (n.nodeType === Node.TEXT_NODE) n.remove();
-          });
+          nodes.forEach(n=>{ if (n.nodeType === Node.TEXT_NODE) n.remove(); });
           btn.insertAdjacentText("beforeend", " " + t.remove);
         }
 
@@ -1659,7 +1618,7 @@
 
       $("copyLinkBtn").addEventListener("click", copyShareLink);
 
-      // Current bindings
+      // Current
       $("current-btnAdd").addEventListener("click", ()=> { currentCreateRow(); currentSaveState(); });
       $("current-btnCalc").addEventListener("click", ()=> currentCalculate(false));
       $("current-btnAuto").addEventListener("click", ()=>{
@@ -1679,7 +1638,7 @@
       currentRestoreState();
       currentCalculate(true);
 
-      // Forecast bindings
+      // Forecast
       $("forecast-mode").addEventListener("change", forecastSetMode);
       $("forecast-btnCalc").addEventListener("click", ()=> forecastCalculate(false));
       $("forecast-btnAuto").addEventListener("click", ()=>{
@@ -1702,15 +1661,10 @@
         if (e.key !== "ArrowLeft" && e.key !== "ArrowRight") return;
 
         const active = (location.hash && location.hash.toLowerCase()==="#forecast") ? "forecast" : "current";
-        if (e.key === "ArrowRight"){
-          setActiveTab(active === "current" ? "forecast" : "current");
-        } else if (e.key === "ArrowLeft"){
-          setActiveTab(active === "forecast" ? "current" : "forecast");
-        }
+        if (e.key === "ArrowRight") setActiveTab(active === "current" ? "forecast" : "current");
+        if (e.key === "ArrowLeft") setActiveTab(active === "forecast" ? "current" : "forecast");
       });
     });
   </script>
 </body>
 </html>
-
-
